--- a/app/src/main/res/layout/speaker_item.xml
+++ b/app/src/main/res/layout/speaker_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:font="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="72dp"
     android:orientation="horizontal"
@@ -19,23 +20,25 @@
         android:orientation="vertical"
         android:gravity="center|left">
 
-        <TextView
+        <org.almotech.oscal.utils.TypefaceTextView
+            font:customTypeface="Roboto-Light.ttf"
             android:id="@+id/speakerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="18sp"
             android:fontFamily="sans-serif-light"
             android:textStyle="bold"
-            android:textColor="#3d4b4b"
+            android:textColor="#000000"
             android:gravity="center"/>
 
-        <TextView
+        <org.almotech.oscal.utils.TypefaceTextView
+            font:customTypeface="Roboto-Light.ttf"
             android:id="@+id/speakerCompany"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:fontFamily="sans-serif-light"
-            android:textColor="#3d4b4b"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="#EC2427"
             android:gravity="center"
             android:layout_marginTop="8dp"/>
 
