--- a/app/src/main/res/layout/speaker_item.xml
+++ b/app/src/main/res/layout/speaker_item.xml
@@ -21,12 +21,11 @@
         android:gravity="center|left">
 
         <org.almotech.oscal.utils.TypefaceTextView
-            font:customTypeface="Roboto-Light.ttf"
+            font:customTypeface="Roboto-Bold.ttf"
             android:id="@+id/speakerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
-            android:fontFamily="sans-serif-light"
             android:textStyle="bold"
             android:textColor="#000000"
             android:gravity="center"/>
