--- a/app/src/main/res/layout/event_item2.xml
+++ b/app/src/main/res/layout/event_item2.xml
@@ -32,7 +32,14 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Small Text"
             android:textSize="12sp"
-            android:id="@+id/textDescr" />
+            android:id="@+id/speakername1" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Small Text"
+            android:textSize="12sp"
+            android:id="@+id/speakername2" />
     </LinearLayout>
 
 </LinearLayout>
